Review and improve the Object Message to XML String Converter. Remove ambiguity over JMS messages vs Java Objects.